feat: update text layout

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div id="container">
     <canvas id="board"></canvas>
   </div>
+  <span class="awkwardAstronauts">Awkward Astronauts</span>
   <div id="hi-score"></div>
 </body>
 
