--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </div>
   <span class="awkwardAstronauts">Awkward Astronauts</span>
   <div id="hi-score"></div>
+  <div id="error"></div>
 </body>
 
 </html>
