fix: testing another property

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div id="error"></div>
 <script>
   document.getElementById('test').addEventListener('keyup', function (event) {
-    document.getElementById('test-print').innerHTML = event.key;
+    document.getElementById('test-print').innerHTML = event.code;
   })
 </script>
 </body>
