feat: jump sound effect, links to related pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 <body>
   <div id="container">
+    <div id="links">
+      <span class="discord-logo"><a href="https://discord.gg/niftygateway" target="_blank">Join our Discord</a></span>
+      <span class="music-attribution"><a href="https://bazookazac.bandcamp.com/" target="_blank">Music by Bazooka Zac</a></span>
+      <span class="nifty-link"><a href="https://niftygateway.com/marketplace/collectible/0xc71561e12faf378b07eacd36b3d0eb0d13a5fb1c" target="_blank">See the Astros</a></span>
+    </div>
     <canvas id="board"></canvas>
   </div>
   <span class="awkwardAstronauts">Awkward Astronauts</span>
